kubernetes/vap/pss-baseline-gluetun-caps.yaml
# Capabilities
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: restrict-added-capabilities-gluetun
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  variables:
    - name: containers
      expression: |
        object.spec.?containers.orValue([]).map(c, c) +
        object.spec.?initContainers.orValue([]).map(c, c) +
        object.spec.?ephemeralContainers.orValue([]).map(c, c)
  validations:
    - expression: |
        variables.containers.all(c,
          c.?securityContext.?capabilities.?add.orValue([]).all(cap, cap in
            ["AUDIT_WRITE", "CHOWN", "DAC_OVERRIDE", "FOWNER", "FSETID", "KILL", "MKNOD", "NET_BIND_SERVICE", "SETFCAP", "SETGID", "SETPCAP", "SETUID", "SYS_CHROOT"]) ||
          (c.image.matches("^ghcr.io/jfroy/gluetun:.*") && c.securityContext.?capabilities.?add.orValue([]).all(cap, cap in ["NET_ADMIN", "NET_RAW"])))
      message: "Adding capabilities outside the allowed baseline list (+gluetun exception) is not permitted"
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: restrict-added-capabilities-gluetun-binding
spec:
  policyName: restrict-added-capabilities-gluetun
  validationActions: ["Deny"]
  matchResources:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        operations: ["CREATE", "UPDATE"]
    namespaceSelector:
      matchExpressions:
        - key: pod-security.kubernetes.io/enforce
          operator: NotIn
          values: ["privileged"]
    objectSelector:
      matchExpressions:
        - key: gluetun
          operator: In
          values:
            - "true"
